--- a/index.html
+++ b/index.html
@@ -203,12 +203,12 @@
               <p>Our carton packaging is environmentally sustainable. Reduce plastic waste by keeping your brand visible.</p>
             </div>
             <div class="feature-card">
-              <h3>🎯 Brand Exposure</h3>
-              <p>Get your product in front of local communities in a meaningful way.</p>
+              <h3>💧 Brand Exposure</h3>
+              <p>Get your product in front of local communities in a meaningful way. Support the local community by providing free, clean drinking water while promoting your brand.</p>
             </div>
             <div class="feature-card">
-              <h3>💧 Free Water Distribution</h3>
-              <p>Support the local community by providing free, clean drinking water while promoting your brand.</p>
+              <h3> 🎯 Data Insights</h3>
+              <p>Gain data insights regarding distribution of water (such as age demographic, gender, nationality, geographic, and more). </p>
             </div>
           </div>
         </div>
