--- a/index.html
+++ b/index.html
@@ -246,22 +246,22 @@
             <div class="team-member">
               <div class="team-avatar">👤</div>
               <h4>Isshin</h4>
-              <p>Role & Expertise</p>
+              <p>Faculty of Science</p>
             </div>
             <div class="team-member">
               <div class="team-avatar">👤</div>
               <h4>Takumi</h4>
-              <p>Role & Expertise</p>
+              <p>Faculty of Engineering</p>
             </div>
             <div class="team-member">
               <div class="team-avatar">👤</div>
               <h4>Airi</h4>
-              <p>Role & Expertise</p>
+              <p>Faculty of Letter</p>
             </div>
             <div class="team-member">
               <div class="team-avatar">👤</div>
               <h4>Hana</h4>
-              <p>Role & Expertise</p>
+              <p>Faculty of Law</p>
             </div>
             <div class="team-member">
               <div class="team-avatar">👤</div>
@@ -271,7 +271,7 @@
             <div class="team-member">
               <div class="team-avatar">👤</div>
               <h4>Kanta</h4>
-              <p>Role & Expertise</p>
+              <p>Faculty of Engineering</p>
             </div>
           </div>
         </div>
